# zipoc

./: .gitignore  CNAME  LICENSE  README.md  main.py  pyproject.toml
.zipoc/: config.json
docs/: CNAME  index.html
docs/css/: style.css
src/zipoc/: __init__.py  cli.py
src/zipoc/commits/: commit.py
src/zipoc/export/: export.py
src/zipoc/hash/: generate_hash.py
src/zipoc/logs/: logger.py
src/zipoc/repo/: delete.py  initialize.py
src/zipoc/ui/: app.py
src/zipoc/utils/: get_init_data.py  help_cmd.py
src/zipoc/web_ui/: app.py
src/zipoc/web_ui/static/css/: index.css
src/zipoc/web_ui/templates/: index.html
utils/: get_init_data.py
